--- a/Пр2реєстрФорма/Пр2реєстрФорма.vcxproj
+++ b/Пр2реєстрФорма/Пр2реєстрФорма.vcxproj
@@ -116,6 +116,9 @@
   <ItemGroup>
     <ClInclude Include="Registration.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="users.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
