--- a/Пр2реєстрФорма/Пр2реєстрФорма.vcxproj.filters
+++ b/Пр2реєстрФорма/Пр2реєстрФорма.vcxproj.filters
@@ -27,4 +27,7 @@
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="users.txt" />
+  </ItemGroup>
 </Project>
